@@ -1,5 +1,6 @@
 CONFIG_ARCH_AUTO=y
 CONFIG_MODULE=n
+CONFIG_SHLIB=n
 CONFIG_COMPAQ_FAST=n
 
 CONFIG_286PMODE=n
